# PriceLens

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  README.md  config.yaml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run_web.py  scan.py  setup.py  start.sh  walkthrough.md
.github/workflows/: ci.yml
data/: custom_prices.json
data/card_database/: index.json
docker/: Dockerfile  docker-compose.yml
docs/: CARD_MODEL_SETUP.md  CUDA_COMPATIBILITY.md  LIVE_CAMERA_TODO.md  TRAINING_RESUME_GUIDE.md
docs/plan/: card-detector-training-plan.md  implementation-plan-main.md  implementation-plan-missing.md  implementation-plan-v2.md  implementation-plan-v3.md  implementation-plan.md  phase1-progress.md  phase1-testing-results.md  quick-reference.md
docs/todo/: TODO.md
models/: README.md  model_info.yaml
notebooks/: train_card_detector.ipynb
scripts/: benchmark.py  benchmark_api.py  benchmark_report.py  build_me1_me2_features.py  cleanup_prices.py  cleanup_repo.sh  create_test_images.py  create_training_dataset.py  debug_price.py  demo_single_image.py  download_models.py  download_test_images.py  extract_features.py  generate_custom_features.py  generate_price_template.py  test_identification.py  test_phase1.py  test_roboflow_model.py  test_web_api.py  train_card_model.py
scripts/benchmark/: benchmark_config.yaml  benchmark_web.py
scripts/debug/: test_detector_images.py  test_identification.py  test_price_api.py  test_price_history.py  test_web_api.py
scripts/download/: download_card_model.py  download_set_data.py
scripts/training/: build_me1_me2_features.py  extract_features.py  monitor_training.py
scripts/utils/: run_api.py  verify_missing_features.py  warm_cache.py
src/: config.py  main.py
src/api/: base.py  cache.py  custom_source.py  errors.py  history.py  pokemontcg_client.py  service.py  smart_cache.py  sync_client.py  tcgplayer_scraper.py
src/core/: event_bus.py  plugin_manager.py
src/detection/: detector_base.py  frame_interpolator.py  yolo_detector.py
src/identification/: embedding_generator.py  faiss_matcher.py  feature_matcher.py  identifier_base.py
src/overlay/: renderer.py
src/preprocessing/: __init__.py  enhancer.py  techniques.py
src/utils/: logging_config.py
src/web/: api.py  price_preloader.py  price_queue.py
src/web/static/: camera.js  index.html  script.js  style.css
tests/: 01_test_live_identification_murkrow.py  conftest.py  test_basic.py  test_false_positive_fixes.py  test_ocr_shadow.py
tests/identification/: test_live_identification.py
web/: package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/about/: page.tsx
web/src/app/dashboard/: page.tsx
web/src/app/dashboard/scan/: page.tsx
web/src/app/docs/: page.tsx
web/src/app/features/: page.tsx
web/src/app/login/: page.tsx
web/src/app/pricing/: page.tsx
web/src/components/features/: cta-section.tsx  features-section.tsx  hero-section.tsx  how-it-works-section.tsx  index.ts  stats-section.tsx
web/src/components/layout/: footer.tsx  header.tsx
